chore: use capacitor-swift-pm from 8.0.0

--- a/renovate.json
+++ b/renovate.json
@@ -47,7 +47,8 @@
     },
     {
       "matchPackageNames": [
-        "ionic-team/capacitor-swift-pm"
+        "ionic-team/capacitor-swift-pm",
+        "capacitor-swift-pm"
       ],
       "matchManagers": [
         "swift-pm"
